<resources>
    <string name="app_name">مدرسة الحان المرتل داوود</string>
    <string name="add_your_data">اضف بيانات الفصل</string>
    <string name="add_child_data">اضف بيانات مخدومك</string>
    <string name="person_name">اسم المخدوم..</string>
    <string name="phone_number">رقم الهاتف..</string>
    <string name="school_year">السنه الدراسيه..</string>
    <string name="add">اضافه</string>
    <string name="first">حضانه [الشاروبيم]</string>
    <string name="second">اولى وتانيه [السيرافيم]</string>
    <string name="third">ثالثه ورابعه [الاربعة كائنات غير متجسدين]</string>
    <string name="fourth">خامسه وسادسه [الاربعه و العشرون قسيساً]</string>
    <string name="fifth">اعدادى و ثانوى [العظيم الانبا انطونيوس]</string>
    <string name="add_children">اضافة مخدوم</string>
    <string name="describe_add_children">اضف مخدومك الى قائمة فصلك</string>
    <string name="all_children">قائمة الفصل</string>
    <string name="all_children_desc">كل المخومين فى فصلك</string>
    <string name="about_church">عن البرنامج</string>
    <string name="add_class_desc">معلومات عن الكنيسة</string>
    <string name="attendance_list">قائمة الحضور</string>
    <string name="attendance_desc">اخذ الحضور اليومى للخدمه</string>
    <string name="parent_phone_number">رقم تليفون الوالد</string>
    <string name="child_address">عنوان المخدوم..</string>
    <string name="child_abouna">اب الاعتراف..</string>
    <string name="three_year">خامسه</string>
    <string name="add_attendance">اخذ الحضور اليومى</string>
    <string name="add_attendance_desc">اضف حضور اليوم</string>
    <string name="empty">-------</string>
    <string name="empty_list">لا يوجد بيانات</string>
    <string name="update">تعديل البيانات</string>
    <string name="delete">حذف البيانات</string>
    <string name="update_your_data">قم بتعديل البيانات</string>
    <string name="update_child_data">عدل بيانات مخدومك</string>
    <string name="update_btn">تعديل</string>
    <string name="deleteAll">مسح الكل</string>
    <string name="create_ecxel_sheet">تصدير اكسيل شيت</string>
    <string name="secondary">تانيه ثانوى</string>
    <string name="new_points">ادخل النقاط الجديده</string>
    <string name="update_points">تعديل النقاط</string>
    <string name="choose_gellary">اختر من الصور</string>
    <string name="take_photo">التقط صورة</string>
    <string name="gender">اختر النوع</string>
    <string name="shmas_notes">الرسامه بيد</string>
    <string name="shmas_date">تاريخ الرسامه</string>
    <string name="shmas_type">رتبة الرسامه</string>
    <string name="meeting_name">اسم الفصل</string>
    <string name="shmas_or_not">اختر حالة الولد</string>
    <string name="birthday_date">تاريخ الميلاد</string>
    <string name="total_points">عدد النقاط</string>
    <string name="eftkad_child">افتقاد الفصل</string>
    <string name="describe_eftkad_children">قم بأفتقاد فصلك</string>
    <string name="birthday_children">اعياد الميلاد</string>
    <string name="birthday_children_desc">اعياد ميلاد فصلك</string>
    <string name="birthday_message">رسالة العيد ميلاد</string>
    <string name="shmas_message">رسالة رسامته شماس</string>
    <string name="eftkad_message">رسالة الافتقاد</string>
    <string name="child_shmas_date">اعياد رسامة الشمامسه</string>
    <string name="describe_shmas_date">عيد على شمامسة فصلك</string>

    <string-array name="Gender">
        <item>ولد</item>
        <item>بنت</item>
    </string-array>

    <string-array name="Status">
        <item>تمت رسامته شماس</item>
        <item>لم تتم رسامته شماس</item>
    </string-array>

    <string-array name="shmas_degree">
        <item>الابصالتس *المرتل *</item>
        <item>الاناغنوستيس * القارىء *</item>
        <item>الايبودياكون * مساعد شماس *</item>
        <item>الدياكون * شماس كامل *</item>
        <item>الارشيدياكون * رئيس شماسة *</item>
    </string-array>

</resources>