<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Add_Person_Scroll"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".ui.view.AddChildActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <ImageView
                android:id="@+id/meeting_icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/profile_image" />

            <TextView
                android:id="@+id/choose_gellary_add_meeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="55dp"
                android:layout_toStartOf="@id/meeting_icon"
                android:drawablePadding="15dp"
                android:fontFamily="cursive"
                android:text="@string/choose_gellary"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_image" />

            <TextView
                android:id="@+id/take_photo_tittle_add_meeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_photo"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/choose_gellary_add_meeting"
                android:layout_toStartOf="@id/meeting_icon"
                android:drawablePadding="33dp"
                app:drawableStartCompat="@drawable/ic_baseline_photo_camera_24"
                />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/meeting_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_meeting_meetingName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/school_year"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_meeting_meetingSchool_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp">
            <Button
                android:id="@+id/Add_btn_meeting"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_centerVertical="true"
                android:background="@drawable/regbtn_style"
                android:text="@string/add"
                android:textSize="20sp"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/progress_Add_meeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>